BUG: Resolution du problem cors